--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     <div class="container main">
-        <img src="your-profile-pic.jpg" alt="Your Profile Picture" class="profile-pic">
+        <img src="my Profile pic.jpeg" alt="Your Profile Picture" class="profile-pic">
         <section id="summary">
             <h2 class="section-title">Summary</h2>
             <p>A motivated and skilled Computer Engineering student with a strong foundation in programming languages, frameworks, databases, and various technical skills. Experienced in mentoring, public relations, and web development, with a passion for debating, reading, and continuous learning.</p>
