--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="my Profile pic.jpeg" alt="Your Profile Picture" class="profile-pic">
         <section id="summary">
             <h2 class="section-title">Summary</h2>
-            <p>A motivated and skilled Computer Engineering student with a strong foundation in programming languages, frameworks, databases, and various technical skills. Experienced in mentoring, public relations, and web development, with a passion for debating, reading, and continuous learning.</p>
+            <p>Driven Computer Engineering student with a robust foundation in programming, frameworks, and databases. Proven experience in mentoring, public relations, and web development. Passionate about debating, reading, and continuous learning.</p>
         </section>
         <section id="experience">
             <h2 class="section-title">Achievements and Experiences</h2>
@@ -50,11 +50,11 @@
         <section id="education">
             <h2 class="section-title">Education</h2>
             <h3>B. TECH (Computer Engineering)</h3>
-            <p><strong>Delhi Technological University, Delhi</strong> (2021-2025) - 7.6 CGPA</p>
+            <p><strong>Delhi Technological University, Delhi</strong> (2021-2025) - 7.56 CGPA</p>
             <h3>CBSE (Class XII)</h3>
             <p><strong>St. Mary’s Public School</strong> (2021) - 84%</p>
             <h3>CBSE (Class X)</h3>
-            <p><strong>St. Mary’s Public School</strong> (2019) - 89.8%</p>
+            <p><strong>St. Mary’s Public School</strong> (2019) - 90%</p>
         </section>
         <section id="skills">
             <h2 class="section-title">Technical Skills</h2>
@@ -62,8 +62,8 @@
                 <p>Programming Languages: C++, Python, Java, SQL, CSS, JavaScript</p>
                 <span></span>
             </div>
-            <div class="skill-bar" data-skill-level="80%">
-                <p>Frameworks and Libraries: React, Express, Bootstrap</p>
+            <div class="skill-bar" data-skill-level="60%">
+                <p>Frameworks and Libraries: React, Express</p>
                 <span></span>
             </div>
             <div class="skill-bar" data-skill-level="70%">
@@ -86,15 +86,15 @@
         <section id="coding-profile">
             <h2 class="section-title">Coding Profile</h2>
             <ul>
-                <li>Leetcode: HimLeetcode</li>
-                <li>Hackerrank: Himanshu</li>
+               <li>Leetcode:<a href="https://leetcode.com/u/Himanshu_Jorwal/" target="_blank"> HimLeetcode</a></li>
+                <li>Hackerrank:<a href="https://www.hackerrank.com/profile/jorwalh" target="_blank"> Himanshu</a></li>
             </ul>
         </section>
         <section id="other-info">
             <h2 class="section-title">Other Information</h2>
             <ul>
-                <li>GitHub: GitHub</li>
-                <li>LinkedIn: LinkedIn</li>
+               <li>GitHub:<a href="https://github.com/HimanshuJR" target="_blank"> Himanshu</a></li>
+                <li>LinkedIn:<a href="https://www.linkedin.com/in/himanshu-jorwal-b6006b22b/" target="_blank"> Himanshu</a></li>
                 <li>Phone: +91 8595781911</li>
                 <li>2K21/CO/201</li>
             </ul>
